# FragaShopClient

./: CMakeLists.txt  README.md
android/: AndroidManifest.xml
resources/fonts/: fonts.qrc
resources/images/: images.qrc
resources/qt/: qtquickcontrols2.conf
resources/translations/: translations.qrc
src/: main.cpp
src/ui/qml/: main.qml
src/ui/qml/Components/: ApplicationMenu.qml  ApplicationWindowContent.qml  ApplicationWindowHeader.qml
src/ui/qml/Components/Pages/: PageHome.qml  PageHomeHeader.qml  PageProduct.qml  PageProductHeader.qml  PageTest.qml
src/ui/qml/Components/Utils/: PriceTag.qml
